--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li><strong>Conselhos e Frases</strong></li>
             </ul>
             <ul>
-              <li><a href="https://github.com/nairoelsner" target="_blank"><i class="devicon-github-original"></i></a></li>
+              <li><a href="https://github.com/nairoelsner/conselhos-e-frases" target="_blank"><i class="devicon-github-original"></i></a></li>
             </ul>
           </nav>
     </div>
